Add Liquibase dependency and update JPA configuration in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sdms_db
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-main.xml
 server.port=8080
